--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+div#app {
+	display: flex;
+	flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+	padding: 1em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+div#search-area {
+	display: flex;
+	gap: 1em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+div#search-text {
+	display: flex;
+	flex: 1;
 }
 
-.App-link {
-  color: #61dafb;
+div#search-text i.icon {
+	font-size: 1.5em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div#search-text input {
+	flex: 1;
+	padding: 0em 0.5em;
+	border: none;
+	background-color: transparent;
+	outline: none;
+	color: white;
+	font-size: 1.3em;
+}
+
+div#search-filters {
+	display: flex;
+	gap: 0.5em;
+}
+
+h1 {
+	text-align: center;
+}
+
+main {
+	background-color: var(--darkgray);
+	flex: 1;
+	padding: 1em;
+}
+
+span#total-results {
+	color: var(--lightgray);
+}
+
+/* On mobile devices */
+@media screen and (max-width: 600px) {
+	div#search-area {
+		flex-direction: column;
+	}
+
+	main {
+		border-radius: 2em 2em 0 0;
+	}
 }
